styles/index-style.css
.content-area {
    display: grid;
    grid-template-columns: 1fr;
    grid-template-rows: 1fr auto auto;
    margin-left: 90px;
    padding: 20px;
    transition: margin-left 0.5s ease;
}

.container, .content-area {
    overflow: visible;
}

.title-container {
    grid-column: span ;
}

.title-container h1{
    font-size: 50px;
}

.title-container h2{
    font-size: 25px;
}

.image {
    display: flex;
    flex-direction: column;
    grid-area: 1/3/2/4;
    min-width: 30%;
}

.image-footnote {
    text-align: right;
    font-weight: lighter;
    font-size: 10px;
    text-decoration: none;
    color: gray;
}

.card{
    gap: 10px;
    grid-area: 2/1/3/3;
    margin-top: 20px;
    margin-bottom: 30px;
    background-color: #E07A5F;
    padding: 30px;
    border-radius: 15px;
    grid-column: span 3;
    grid-row: span 1;
    color: white;
    max-width: 100%;
    word-wrap: break-word;
    overflow-wrap: break-word;
    padding-bottom: 20px;
}

.card h1 {
    font-size: 35px;
    font-weight: 300;
    margin-top: 10px;
}

.card p {
    font-size: 20px;
    font-weight: lighter;
    text-align-last: center;
    margin-top: 15px;
    min-width: auto;
    min-height: auto
}

.btn {
    display: inline-block;
    padding: 20px 20px;
    background-color: #E07A5F;
    color: white;
    text-decoration: none;
    font-size: 18px;
    border-radius: 8px;
    margin-top: 80px;
    text-align: center;
    margin-left: 2%;
}


.btn:hover {
    background-color: #E07A5F80;
}
.btn:active {
    background-color: #bc411f;
}

.image-container {
    position: relative;
    grid-column: span 3;
    grid-row: span 2;
    width: 100%;
    display: flex; 
    justify-content: center;
    align-items: center; 
    overflow: hidden; 
}

.image-container img {
    max-width: 100%;
    height: auto;
}

.image-text {
    position: absolute;
    top: 50%; 
    left: 50%;
    transform: translate(-50%, -50%);
    color: white;
    font-size: 50px;
    font-weight: light;
    background: rgba(30, 30, 30, 0.314);
    border-radius: 20px;
    padding: 20px 40px; 
    border-radius: 15px;
    display: flex;
    align-items: center;
    justify-content: center;
    min-width: 60%;
    min-height: 80px;
}

@media (max-width: 1525px) {
    .image {
        display: flex;
        justify-content: center;
        min-width: 30%;
        margin-right: 50px;
    }
}

@media (max-width: 1200px) {
    .content-area {
        grid-template-columns: 1fr;
        padding: 10px;
    }

    .title-container {
        display: flex;
        flex-direction: column;
        align-items: center;
    }

    .main-title {
        text-align: center;
    }

    .main-subheading {
        margin-bottom: 20px;

    }

    .btn {
        display: block;
        width: 50%;
        text-align: center;
        margin: 10px auto;
        font-size: 16px;
        padding: 12px 20px;
    }

    .card {
        padding: 20px;
        margin: 10px 0;
        text-align: center;
    }

    .image {
        grid-area: 2/1/2/3;
        display: flex;
        flex-direction: column;
        align-items: center;
        width: 100%;
    }   

    .image img {
        max-width: 70%;
        height: auto;
    }

    .image-text {
        font-size: 4vw;
        padding: 10px 20px;
    }

    .card h1 {
        font-size: 23px;
    }

    .card p {
        font-size: 15px;
    }
}

